--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                                   </div>
                                 </div>
                                 <div class="d-block mx-auto text-center">
-                                  <button class='deliver'>Make Delivery</button>
-                                  <button class='delivernot'>Pick Up</button>
+                                  <button class="btn btn-primary" class='deliver' >Make Delivery</button>
+                                  <button class="btn btn-danger" class='delivernot' >Pick Up</button>
                                 </div>
                               </div>
                             </div>
@@ -186,8 +186,8 @@
                                             </div>
                                           </div>
                                           <div class="d-block mx-auto text-center">
-                                            <button class='deliver'>Make Delivery</button>
-                                            <button class='delivernot'>Pick Up</button>
+                                            <button class="btn btn-primary" class='deliver' >Make Delivery</button>
+                                            <button class="btn btn-danger" class='delivernot' >Pick Up</button>
                                           </div>
                                         </div>
                                       </div>
@@ -268,8 +268,8 @@
                                             </div>
                                           </div>
                                           <div class="d-block mx-auto text-center">
-                                            <button class='deliver'>Make Delivery</button>
-                                            <button class='delivernot'>Pick Up</button>
+                                            <button class="btn btn-primary" class='deliver' >Make Delivery</button>
+                                            <button  class="btn btn-danger" class='delivernot' >Pick Up</button>
                                           </div>
                                         </div>
                                       </div>
@@ -285,9 +285,9 @@
                             <hr>
                         </div>
 
-  <script src="main.js" charset="utf-8"></script>
+  <script src="js/main.js" charset="utf-8"></script>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-  <script src="a.js" charset="utf-8"></script>
+  <script src="js/scripts.js" charset="utf-8"></script>
   </body>
 </html>
