adds MDIFIED files

--- a/index.html
+++ b/index.html
@@ -96,17 +96,17 @@
                                     <div class="customerdata row">
                                       <div class="col-sm-3"></div>
                                       <form action="" class="form-group col-sm-6 data">
-                                        <input type="text" class="form-control cdata" placeholder="Name:">
-                                        <input type="text" class="form-control cdata" placeholder="phone number: ">
-                                        <input type="text" class="form-control cdata" placeholder="delivery location: ">
+                                        <input type="text" class="form-control cdata" placeholder="Enter your Name:">
+                                        <input type="text" class="form-control cdata" placeholder="Enter your phone number: ">
+                                        <input type="text" class="form-control cdata" placeholder="Enter the location: ">
                                         <button class="btn bg-info text-center d-block mx-auto go">Make Delivery</button>
                                       </form>
                                     <div class="col-sm-3"></div>
                                   </div>
                                 </div>
                                 <div class="d-block mx-auto text-center">
-                                  <button class="btn btn-primary" class='deliver' >Make Delivery</button>
-                                  <button class="btn btn-danger" class='delivernot' >Pick Up</button>
+                                  <button class='deliver'>Make Delivery</button>
+                                  <button class='delivernot'>Pick Up</button>
                                 </div>
                               </div>
                             </div>
@@ -177,17 +177,17 @@
                                             <div class="customerdata row">
                                               <div class="col-sm-3"></div>
                                               <form action="" class="form-group col-sm-6 data">
-                                                <input type="text" class="form-control cdata" placeholder="Name:">
-                                                <input type="text" class="form-control cdata" placeholder="phone number: ">
-                                                <input type="text" class="form-control cdata" placeholder="delivery location: ">
+                                                <input type="text" class="form-control cdata" placeholder="Enter your Name:">
+                                                <input type="text" class="form-control cdata" placeholder="Enter your phone number: ">
+                                                <input type="text" class="form-control cdata" placeholder="Enter the location: ">
                                                 <button class="btn bg-info text-center d-block mx-auto go">Make Delivery</button>
                                               </form>
                                               <div class="col-sm-3"></div>
                                             </div>
                                           </div>
                                           <div class="d-block mx-auto text-center">
-                                            <button class="btn btn-primary" class='deliver' >Make Delivery</button>
-                                            <button class="btn btn-danger" class='delivernot' >Pick Up</button>
+                                            <button class='deliver'>Make Delivery</button>
+                                            <button class='delivernot'>Pick Up</button>
                                           </div>
                                         </div>
                                       </div>
@@ -259,17 +259,17 @@
                                             <div class="customerdata row">
                                               <div class="col-sm-3"></div>
                                               <form action="" class="form-group col-sm-6 data">
-                                                <input type="text" class="form-control cdata" placeholder="Name:">
-                                                <input type="text" class="form-control cdata" placeholder="phone number: ">
-                                                <input type="text" class="form-control cdata" placeholder="delivery location: ">
+                                                <input type="text" class="form-control cdata" placeholder="Enter your Name:">
+                                                <input type="text" class="form-control cdata" placeholder="Enter your phone number: ">
+                                                <input type="text" class="form-control cdata" placeholder="Enter the location: ">
                                                 <button class="btn bg-info text-center d-block mx-auto go">Make Delivery</button>
                                               </form>
                                               <div class="col-sm-3"></div>
                                             </div>
                                           </div>
                                           <div class="d-block mx-auto text-center">
-                                            <button class="btn btn-primary" class='deliver' >Make Delivery</button>
-                                            <button  class="btn btn-danger" class='delivernot' >Pick Up</button>
+                                            <button class='deliver' >Make Delivery</button>
+                                            <button class='delivernot'>Pick Up</button>
                                           </div>
                                         </div>
                                       </div>
