--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
                                     <div class="customerdata row">
                                       <div class="col-sm-3"></div>
                                       <form action="" class="form-group col-sm-6 data">
-                                        <input type="text" class="form-control cdata" placeholder="Enter your Name:">
-                                        <input type="text" class="form-control cdata" placeholder="Enter your phone number: ">
-                                        <input type="text" class="form-control cdata" placeholder="Enter the location: ">
+                                        <input type="text" class="form-control cdata" placeholder="name:">
+                                        <input type="text" class="form-control cdata" placeholder="phone number: ">
+                                        <input type="text" class="form-control cdata" placeholder="delivery location: ">
                                         <button class="btn bg-info text-center d-block mx-auto go">Make Delivery</button>
                                       </form>
                                     <div class="col-sm-3"></div>
@@ -106,7 +106,7 @@
                                 </div>
                                 <div class="d-block mx-auto text-center">
                                   <button class='deliver'>Make Delivery</button>
-                                  <button class='delivernot'>Pick Up</button>
+                                  <button class='pickup'>Pick Up</button>
                                 </div>
                               </div>
                             </div>
@@ -177,9 +177,9 @@
                                             <div class="customerdata row">
                                               <div class="col-sm-3"></div>
                                               <form action="" class="form-group col-sm-6 data">
-                                                <input type="text" class="form-control cdata" placeholder="Enter your Name:">
-                                                <input type="text" class="form-control cdata" placeholder="Enter your phone number: ">
-                                                <input type="text" class="form-control cdata" placeholder="Enter the location: ">
+                                                <input type="text" class="form-control cdata" placeholder="name:">
+                                                <input type="text" class="form-control cdata" placeholder="phone number: ">
+                                                <input type="text" class="form-control cdata" placeholder="delivery location: ">
                                                 <button class="btn bg-info text-center d-block mx-auto go">Make Delivery</button>
                                               </form>
                                               <div class="col-sm-3"></div>
@@ -187,7 +187,7 @@
                                           </div>
                                           <div class="d-block mx-auto text-center">
                                             <button class='deliver'>Make Delivery</button>
-                                            <button class='delivernot'>Pick Up</button>
+                                            <button class='pickup'>Pick Up</button>
                                           </div>
                                         </div>
                                       </div>
@@ -259,9 +259,9 @@
                                             <div class="customerdata row">
                                               <div class="col-sm-3"></div>
                                               <form action="" class="form-group col-sm-6 data">
-                                                <input type="text" class="form-control cdata" placeholder="Enter your Name:">
-                                                <input type="text" class="form-control cdata" placeholder="Enter your phone number: ">
-                                                <input type="text" class="form-control cdata" placeholder="Enter the location: ">
+                                                <input type="text" class="form-control cdata" placeholder="name:">
+                                                <input type="text" class="form-control cdata" placeholder="phone number: ">
+                                                <input type="text" class="form-control cdata" placeholder="delivery location: ">
                                                 <button class="btn bg-info text-center d-block mx-auto go">Make Delivery</button>
                                               </form>
                                               <div class="col-sm-3"></div>
@@ -269,7 +269,7 @@
                                           </div>
                                           <div class="d-block mx-auto text-center">
                                             <button class='deliver' >Make Delivery</button>
-                                            <button class='delivernot'>Pick Up</button>
+                                            <button class='pickup'>Pick Up</button>
                                           </div>
                                         </div>
                                       </div>
