--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
       <hr>
         <div ng-switch="myVar">
           <div ng-switch-when="small"
-            <h2>small</h2>
               <div class="col-md-4">
                 <div class="content">
                   <img border="0" src="images/image7.jpg" width="620" height="500">
@@ -63,18 +62,18 @@
                                         <select class="custom-select custom-select-md mb-3" id="crust" required>
                                           <option value="crispy">crispy @ Ksh. 100</option>
                                           <option value="stuffed">stuffed @ Ksh. 150</option>
-                                          <option value="gluten">gluten free @ sh. 180</option>
+                                          <option value="gluten">gluten free @ Ksh 200</option>
                                         </select>
                                       <label>Select Toppings</label>
                                         <select class="custom-select custom-select-md mb-3" id="toppings" required>
-                                              <option value="bacon">bacon @ sh. 80</option>
-                                              <option value="pineapple">pineapple @ sh. 80</option>
-                                              <option value="mushroom">Mushroom @ sh. 80</option>
-                                              <option value="chicken">chicken Pepper @ sh. 80</option>
-                                              <option value="peperoni">Peperoni @ sh. 120</option>
-                                              <option value="olives">olives @ sh. 120</option>
-                                              <option value="pepper">green pepper @ sh. 120</option>
-                                              <option value="cheese">extra cheese@ sh. 120</option>
+                                              <option value="bacon">bacon @ Ksh 100</option>
+                                              <option value="pineapple">pineapple @ Ksh 100</option>
+                                              <option value="mushroom">Mushroom @ Ksh 100</option>
+                                              <option value="chicken">chicken Pepper @ Ksh 100</option>
+                                              <option value="peperoni">Peperoni @ Ksh 150</option>
+                                              <option value="olives">olives @ Ksh 150</option>
+                                              <option value="pepper">green pepper @ Ksh 150</option>
+                                              <option value="cheese">extra cheese@ Ksh 150</option>
                                         </select>
                                             <label for="number">Number of Pizza's</label>
                                                 <input type="number" class="form-control" id="number" placeholder="Number of pizzas" min="1" required>
@@ -105,8 +104,8 @@
                                   </div>
                                 </div>
                                 <div class="d-block mx-auto text-center">
-                                  <button class='deliver'>Make Delivery</button>
-                                  <button class='pickup'>Pick Up</button>
+                                  <button class="deliver">Make Delivery</button>
+                                  <button class="pickup">Pick Up</button>
                                 </div>
                               </div>
                             </div>
@@ -116,7 +115,6 @@
                     </div>
 
                     <div ng-switch-when="medium">
-                        <h2>medium</h2>
                           <div class="col-md-4">
                             <div class="content">
                               <img border="0" src="images/image11.jpeg" width="620" height="500">
@@ -144,18 +142,18 @@
                                               <select class="custom-select custom-select-md mb-3" id="crust" required>
                                                 <option value="crispy">crispy @ Ksh. 100</option>
                                                 <option value="stuffed">stuffed @ Ksh. 150</option>
-                                                <option value="gluten">gluten free @ sh. 180</option>
+                                                <option value="gluten">gluten free @ Ksh 200</option>
                                               </select>
                                               <label>Select Toppings</label>
                                               <select class="custom-select custom-select-md mb-3" id="toppings" required>
-                                                <option value="bacon">bacon @ sh. 80</option>
-                                                <option value="pineapple">pineapple @ sh. 80</option>
-                                                <option value="mushroom">Mushroom @ sh. 80</option>
-                                                <option value="chicken">chicken Pepper @ sh. 80</option>
-                                                <option value="peperoni">Peperoni @ sh. 120</option>
-                                                <option value="olives">olives @ sh. 120</option>
-                                                <option value="pepper">green pepper @ sh. 120</option>
-                                                <option value="cheese">extra cheese@ sh. 120</option>
+                                                <option value="bacon">bacon @ Ksh 100</option>
+                                                <option value="pineapple">pineapple @ Ksh 100</option>
+                                                <option value="mushroom">Mushroom @ Ksh 100</option>
+                                                <option value="chicken">chicken Pepper @ Ksh 100</option>
+                                                <option value="peperoni">Peperoni @ Ksh 150</option>
+                                                <option value="olives">olives @ Ksh 150</option>
+                                                <option value="pepper">green pepper @ Ksh 150</option>
+                                                <option value="cheese">extra cheese@ Ksh 150</option>
                                               </select>
                                               <label for="number">Number of Pizza's</label>
                                                 <input type="number" class="form-control" id="number" placeholder="Number of pizzas" min="1" required>
@@ -186,8 +184,8 @@
                                             </div>
                                           </div>
                                           <div class="d-block mx-auto text-center">
-                                            <button class='deliver'>Make Delivery</button>
-                                            <button class='pickup'>Pick Up</button>
+                                            <button class="deliver">Make Delivery</button>
+                                            <button class="pickup">Pick Up</button>
                                           </div>
                                         </div>
                                       </div>
@@ -197,7 +195,6 @@
                               </div>
 
                               <div ng-switch-when="large">
-                                <h2>large</h2>
                                 <div class="col-md-4">
                                   <div class="content">
                                     <img border="0" src="images/image9.jpg" width="620" height="500">
@@ -225,18 +222,18 @@
                                                 <select class="custom-select custom-select-md mb-3" id="crust" required>
                                                   <option value="crispy">crispy @ Ksh. 100</option>
                                                   <option value="stuffed">stuffed @ Ksh. 150</option>
-                                                  <option value="gluten">gluten free @ sh. 180</option>
+                                                  <option value="gluten">gluten free @ Ksh 200</option>
                                                 </select>
                                                 <label>Select Toppings</label>
                                                 <select class="custom-select custom-select-md mb-3" id="toppings" required>
-                                                  <option value="bacon">bacon @ sh. 80</option>
-                                                  <option value="pineapple">pineapple @ sh. 80</option>
-                                                  <option value="mushroom">Mushroom @ sh. 80</option>
-                                                  <option value="chicken">chicken Pepper @ sh. 80</option>
-                                                  <option value="peperoni">Peperoni @ sh. 120</option>
-                                                  <option value="olives">olives @ sh. 120</option>
-                                                  <option value="pepper">green pepper @ sh. 120</option>
-                                                  <option value="cheese">extra cheese@ sh. 120</option>
+                                                  <option value="bacon">bacon @ Ksh 100</option>
+                                                  <option value="pineapple">pineapple @ Ksh 100</option>
+                                                  <option value="mushroom">Mushroom @ Ksh 100</option>
+                                                  <option value="chicken">chicken Pepper @ Ksh 100</option>
+                                                  <option value="peperoni">Peperoni @ Ksh 150</option>
+                                                  <option value="olives">olives @ Ksh 150</option>
+                                                  <option value="pepper">green pepper @ Ksh 150</option>
+                                                  <option value="cheese">extra cheese@ Ksh 150</option>
                                                 </select>
                                                 <label for="number">Number of Pizza's</label>
                                                 <input type="number" class="form-control" id="number" placeholder="Number of pizzas" min="1" required>
@@ -268,8 +265,8 @@
                                             </div>
                                           </div>
                                           <div class="d-block mx-auto text-center">
-                                            <button class='deliver' >Make Delivery</button>
-                                            <button class='pickup'>Pick Up</button>
+                                            <button class="deliver" >Make Delivery</button>
+                                            <button class="pickup">Pick Up</button>
                                           </div>
                                         </div>
                                       </div>
