index.html changes added

--- a/index.html
+++ b/index.html
@@ -18,11 +18,31 @@
     </ul>
   </div>
 
+
   <div class="home">
     <div class="header">
       <h1>something pizza place</h1>
     </div>
   </div>
+
+            <div id="menu">
+                  <div class="container">
+                        <h2>Our Toppings</h2>
+                      <div class="row">
+                      <div class="col-md-6">
+                        <p class="text-uppercase">
+                            bacon @ Ksh 100 <br>
+                            pineapple @ Ksh 100 <br>
+                            Mushroom @ Ksh 100 <br>
+                            chicken Pepper @ Ksh 100 <br>
+                            Peperoni @ Ksh 150 <br>
+                            olives @ Ksh 150 <br>
+                            green pepper @ Ksh 150 <br>
+                            extra cheese@ Ksh 150 <br>
+                              </div>
+                          </div>
+                        </div>
+                      </div>
 
 
     <div class="container" id="size">
