--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ul>
      <li class='active'><a href="index.html"><span>Home</span></a></li>
      <li><a href=#menu><span>menu</span></a></li>
-     <li><a href=#order><span>order</span></a></li>
+     <li><a href=#size><span>order</span></a></li>
      <li class='last'><a href="contact.html"><span>Contact</span></a></li>
     </ul>
   </div>
