--- a/index.html
+++ b/index.html
@@ -13,16 +13,36 @@
     <ul>
      <li class='active'><a href="index.html"><span>Home</span></a></li>
      <li><a href=#menu><span>menu</span></a></li>
-     <li><a href=#order><span>order</span></a></li>
+     <li><a href=#size><span>order</span></a></li>
      <li class='last'><a href="contact.html"><span>Contact</span></a></li>
     </ul>
   </div>
+
 
   <div class="home">
     <div class="header">
       <h1>something pizza place</h1>
     </div>
   </div>
+
+            <div id="menu">
+                  <div class="container">
+                        <h2>Our Toppings</h2>
+                      <div class="row">
+                      <div class="col-md-6">
+                        <p class="text-uppercase">
+                            bacon @ Ksh 100 <br>
+                            pineapple @ Ksh 100 <br>
+                            Mushroom @ Ksh 100 <br>
+                            chicken Pepper @ Ksh 100 <br>
+                            Peperoni @ Ksh 150 <br>
+                            olives @ Ksh 150 <br>
+                            green pepper @ Ksh 150 <br>
+                            extra cheese@ Ksh 150 <br>
+                              </div>
+                          </div>
+                        </div>
+                      </div>
 
 
     <div class="container" id="size">
@@ -91,13 +111,13 @@
                                 <h1 class="text-center" id="summary">Order</h1>
                                 <h2 class="text-center summary">you ordered:</h2>
                                 <ol id="list" class="text-center sum"></ol>
-                                  <div class="cdata-overlay">
+                                  <div class="summary-data">
                                     <div class="customerdata row">
                                       <div class="col-sm-3"></div>
                                       <form action="" class="form-group col-sm-6 data">
-                                        <input type="text" class="form-control cdata" placeholder="name:">
-                                        <input type="text" class="form-control cdata" placeholder="phone number: ">
-                                        <input type="text" class="form-control cdata" placeholder="delivery location: ">
+                                        <input type="text" class="form-control sum-data" placeholder="name:">
+                                        <input type="text" class="form-control sum-data" placeholder="phone number: ">
+                                        <input type="text" class="form-control sum-data" placeholder="delivery location: ">
                                         <button class="btn bg-info text-center d-block mx-auto go">Make Delivery</button>
                                       </form>
                                     <div class="col-sm-3"></div>
@@ -171,13 +191,13 @@
                                           <h1 class="text-center" id="summary">Order</h1>
                                           <h2 class="text-center summary">you ordered:</h2>
                                           <ol id="list" class="text-center sum"></ol>
-                                          <div class="cdata-overlay">
+                                          <div class="summary-data">
                                             <div class="customerdata row">
                                               <div class="col-sm-3"></div>
                                               <form action="" class="form-group col-sm-6 data">
-                                                <input type="text" class="form-control cdata" placeholder="name:">
-                                                <input type="text" class="form-control cdata" placeholder="phone number: ">
-                                                <input type="text" class="form-control cdata" placeholder="delivery location: ">
+                                                <input type="text" class="form-control sum-data" placeholder="name:">
+                                                <input type="text" class="form-control sum-data" placeholder="phone number: ">
+                                                <input type="text" class="form-control sum-data" placeholder="delivery location: ">
                                                 <button class="btn bg-info text-center d-block mx-auto go">Make Delivery</button>
                                               </form>
                                               <div class="col-sm-3"></div>
@@ -252,13 +272,13 @@
                                           <h2 class="text-center summary">you ordered:</h2>
                                           <ol id="list" class="text-center sum">
                                           </ol>
-                                          <div class="cdata-overlay">
+                                          <div class="summary-data">
                                             <div class="customerdata row">
                                               <div class="col-sm-3"></div>
                                               <form action="" class="form-group col-sm-6 data">
-                                                <input type="text" class="form-control cdata" placeholder="name:">
-                                                <input type="text" class="form-control cdata" placeholder="phone number: ">
-                                                <input type="text" class="form-control cdata" placeholder="delivery location: ">
+                                                <input type="text" class="form-control sum-data" placeholder="name:">
+                                                <input type="text" class="form-control sum-data" placeholder="phone number: ">
+                                                <input type="text" class="form-control sum-data" placeholder="delivery location: ">
                                                 <button class="btn bg-info text-center d-block mx-auto go">Make Delivery</button>
                                               </form>
                                               <div class="col-sm-3"></div>
