--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
                                 <h1 class="text-center" id="summary">Order</h1>
                                 <h2 class="text-center summary">you ordered:</h2>
                                 <ol id="list" class="text-center sum"></ol>
-                                  <div class="cdata-overlay">
+                                  <div class="summary-data">
                                     <div class="customerdata row">
                                       <div class="col-sm-3"></div>
                                       <form action="" class="form-group col-sm-6 data">
-                                        <input type="text" class="form-control cdata" placeholder="name:">
-                                        <input type="text" class="form-control cdata" placeholder="phone number: ">
-                                        <input type="text" class="form-control cdata" placeholder="delivery location: ">
-                                        <button class="btn bg-info text-center d-block mx-auto go">Make Delivery</button>
+                                        <input type="text" class="form-control sum-data" placeholder="name:">
+                                        <input type="text" class="form-control sum-data" placeholder="phone number: ">
+                                        <input type="text" class="form-control sum-data" placeholder="delivery location: ">
+                                        <button class="btn bg-info text-center d-block mx-auto go" id="toDeliver">Make Delivery</button>
                                       </form>
                                     <div class="col-sm-3"></div>
                                   </div>
@@ -191,14 +191,14 @@
                                           <h1 class="text-center" id="summary">Order</h1>
                                           <h2 class="text-center summary">you ordered:</h2>
                                           <ol id="list" class="text-center sum"></ol>
-                                          <div class="cdata-overlay">
+                                          <div class="summary-data">
                                             <div class="customerdata row">
                                               <div class="col-sm-3"></div>
                                               <form action="" class="form-group col-sm-6 data">
-                                                <input type="text" class="form-control cdata" placeholder="name:">
-                                                <input type="text" class="form-control cdata" placeholder="phone number: ">
-                                                <input type="text" class="form-control cdata" placeholder="delivery location: ">
-                                                <button class="btn bg-info text-center d-block mx-auto go">Make Delivery</button>
+                                                <input type="text" class="form-control sum-data" placeholder="name:">
+                                                <input type="text" class="form-control sum-data" placeholder="phone number: ">
+                                                <input type="text" class="form-control sum-data" placeholder="delivery location: ">
+                                                <button class="btn bg-info text-center d-block mx-auto go" id="toDeliver">Make Delivery</button>
                                               </form>
                                               <div class="col-sm-3"></div>
                                             </div>
@@ -272,14 +272,14 @@
                                           <h2 class="text-center summary">you ordered:</h2>
                                           <ol id="list" class="text-center sum">
                                           </ol>
-                                          <div class="cdata-overlay">
+                                          <div class="summary-data">
                                             <div class="customerdata row">
                                               <div class="col-sm-3"></div>
                                               <form action="" class="form-group col-sm-6 data">
-                                                <input type="text" class="form-control cdata" placeholder="name:">
-                                                <input type="text" class="form-control cdata" placeholder="phone number: ">
-                                                <input type="text" class="form-control cdata" placeholder="delivery location: ">
-                                                <button class="btn bg-info text-center d-block mx-auto go">Make Delivery</button>
+                                                <input type="text" class="form-control sum-data" placeholder="name:">
+                                                <input type="text" class="form-control sum-data" placeholder="phone number: ">
+                                                <input type="text" class="form-control sum-data" placeholder="delivery location: ">
+                                                <button class="btn bg-info text-center d-block mx-auto go" id="toDeliver">Make Delivery</button>
                                               </form>
                                               <div class="col-sm-3"></div>
                                             </div>
