--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                         <input type="text" class="form-control sum-data" placeholder="name:">
                                         <input type="text" class="form-control sum-data" placeholder="phone number: ">
                                         <input type="text" class="form-control sum-data" placeholder="delivery location: ">
-                                        <button class="btn bg-info text-center d-block mx-auto go">Make Delivery</button>
+                                        <button class="btn bg-info text-center d-block mx-auto go" id="toDeliver">Make Delivery</button>
                                       </form>
                                     <div class="col-sm-3"></div>
                                   </div>
@@ -198,7 +198,7 @@
                                                 <input type="text" class="form-control sum-data" placeholder="name:">
                                                 <input type="text" class="form-control sum-data" placeholder="phone number: ">
                                                 <input type="text" class="form-control sum-data" placeholder="delivery location: ">
-                                                <button class="btn bg-info text-center d-block mx-auto go">Make Delivery</button>
+                                                <button class="btn bg-info text-center d-block mx-auto go" id="toDeliver">Make Delivery</button>
                                               </form>
                                               <div class="col-sm-3"></div>
                                             </div>
@@ -279,7 +279,7 @@
                                                 <input type="text" class="form-control sum-data" placeholder="name:">
                                                 <input type="text" class="form-control sum-data" placeholder="phone number: ">
                                                 <input type="text" class="form-control sum-data" placeholder="delivery location: ">
-                                                <button class="btn bg-info text-center d-block mx-auto go">Make Delivery</button>
+                                                <button class="btn bg-info text-center d-block mx-auto go" id="toDeliver">Make Delivery</button>
                                               </form>
                                               <div class="col-sm-3"></div>
                                             </div>
