--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                         </div>
 
   <script src="js/main.js" charset="utf-8"></script>
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
   <script src="js/scripts.js" charset="utf-8"></script>
   </body>
